@@ -11,18 +11,22 @@
 #include <boost/thread/mutex.hpp>
 
 
-namespace TcpServerBridge
+namespace TcpBridge
 {
 	class Pitcher
 		: public IPitcher
 	{
+		typedef boost::shared_ptr<boost::asio::ip::tcp::socket> socket_ptr;
+
 	public:
-		Pitcher(boost::asio::io_service& io_service, unsigned long interval);
+		Pitcher(const socket_ptr& socket, unsigned long interval);
 
 	private:
 		virtual void write(const std::string& connection_id, const char* buffer, size_t length);
 
 	private:
+		const socket_ptr&			m_Socket;
+
 		unsigned long				m_Interval;
 	};
 }
